# svglib

./: .gitignore  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: ci.yml
svglib/: svglib.py
tests/: test_samples.py
