[metadata]
name = svglib
version = attr: setuptools_scm.get_version
description = A pure-Python library for reading and converting SVG
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords =
    SVG
    PDF
    reportlab
    conversion
    graphics
url = https://github.com/deeplook/svglib
author = Dinu Gherman
author_email = gherman@darwin.in-berlin.de
license = LGPL-3.0-only
license_files = LICENSE.txt
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: End Users/Desktop
    Intended Audience :: Developers
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3 :: Only
    Topic :: Documentation
    Topic :: Utilities
    Topic :: Printing
    Topic :: Multimedia :: Graphics :: Graphics Conversion
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Text Processing :: Markup :: XML

[options]
python_requires = >=3.8

setup_requires =
    setuptools_scm[toml]

install_requires =
    reportlab
    lxml
    tinycss2>=1.1.0
    cssselect2>=0.5.0

packages =
    svglib
scripts =
    scripts/svg2pdf

[options.data_files]
share/man/man1 = svg2pdf.1

# deps are included here mainly for local/venv installs using pip
# otherwise deps are handled via tox, ci config files or pkg managers
[options.extras_require]
doc =
    sphinx
    sphinx_git
    recommonmark
    sphinx_rtd_theme<3.0.0
    sphinxcontrib-apidoc
test =
    pytest
    pytest-cov
    reportlab[accel,pycairo]
cov =
    coverage[toml]
    coverage_python_version
all =
    %(cov)s
    %(doc)s
    %(test)s

[check]
metadata = true
restructuredtext = true
strict = false

[flake8]
exclude =
    .git,
    __pycache__,
    build,
    dist,
    test

max-line-length = 90
extend-ignore = E203
